--- a/pc_shop/templates/base.html
+++ b/pc_shop/templates/base.html
@@ -19,6 +19,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}">Главная</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'product_list' %}">Каталог</a>
+                    </li>
                 </ul>
                 <a href="#" class="btn btn-outline-primary">Корзина</a>
             </div>
