--- a/pc_shop/products/templates/products/product_detail.html
+++ b/pc_shop/products/templates/products/product_detail.html
@@ -3,32 +3,36 @@
 {% block title %}{{ product.name }} - Детали{% endblock %}
 
 {% block content %}
-  <div class="row">
+<div class="row">
     <div class="col-md-6">
-      <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
+        <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
     </div>
     <div class="col-md-6">
-      <h1>{{ product.name }}</h1>
-      <p>{{ product.price }} ₽</p>
-      <p>{{ product.description }}</p>
-      <a href="#" class="btn btn-success">Добавить в корзину</a>
+        <h1>{{ product.name }}</h1>
+        <p>{{ product.price }} ₽</p>
+        <p>{{ product.description }}</p>
+        <form action="{% url 'cart_add' product.id %}" method="post">
+            {% csrf_token %}
+            <input type="number" name="quantity" value="1" min="1" style="width: 60px;">
+            <button type="submit" class="btn btn-success">Добавить в корзину</button>
+        </form>
     </div>
-  </div>
+</div>
 
-  <!-- Характеристики -->
-  <div class="mt-4">
+<!-- Характеристики -->
+<div class="mt-4">
     {% for group, attributes in grouped_attributes %}
-      <h3>{{ group }}</h3>
-      <table class="table table-striped">
+    <h3>{{ group }}</h3>
+    <table class="table table-striped">
         <tbody>
-          {% for attr in attributes %}
-            <tr>
-              <td>{{ attr.attribute.name }}</td>
-              <td>{{ attr.value }}</td>
-            </tr>
-          {% endfor %}
+        {% for attr in attributes %}
+        <tr>
+            <td>{{ attr.attribute.name }}</td>
+            <td>{{ attr.value }}</td>
+        </tr>
+        {% endfor %}
         </tbody>
-      </table>
+    </table>
     {% endfor %}
-  </div>
+</div>
 {% endblock %}
