--- a/pc_shop/products/templates/products/product_detail.html
+++ b/pc_shop/products/templates/products/product_detail.html
@@ -11,6 +11,14 @@
         <h1>{{ product.name }}</h1>
         <p>{{ product.price }} ₽</p>
         <p>{{ product.description }}</p>
+        <form action="{% url 'add_to_compare' product.id %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-outline-primary">Сравнить</button>
+        </form>
+        <form action="{% url 'add_to_wishlist' product.id %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-outline-danger">Добавить в список желаний</button>
+        </form>
         <form action="{% url 'cart_add' product.id %}" method="post">
             {% csrf_token %}
             <input type="number" name="quantity" value="1" min="1" style="width: 60px;">
