--- a/pc_shop/templates/base.html
+++ b/pc_shop/templates/base.html
@@ -95,6 +95,7 @@
 
     <!-- Скрипты -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/catalog.js' %}"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
