--- a/pc_shop/static/css/styles.css
+++ b/pc_shop/static/css/styles.css
@@ -248,3 +248,15 @@ footer .social-icons a:hover {
 #product-grid {
     animation: fadeInGrid 0.5s ease-out;
 }
+
+.dropdown-menu .active {
+    background-color: var(--primary);
+    color: white;
+    font-weight: 600;
+}
+
+#active-sort-label {
+    margin-left: 5px;
+    font-weight: 500;
+    color: var(--primary);
+}
