--- a/pc_shop/products/templates/products/product_list.html
+++ b/pc_shop/products/templates/products/product_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load url_helpers %}
+{% load product_filters %}
+{% load static %}
 {% block content %}
 <!-- Фильтры и список товаров -->
 <div class="row">
@@ -72,7 +74,6 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h3>{% if category %}{{ category.name }}{% else %}Все товары{% endif %}</h3>
             <!-- Блок сортировки -->
-            <!-- Блок сортировки -->
             <div class="dropdown">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
                     Сортировать:
@@ -117,7 +118,13 @@
                 <div class="card product-card h-100">
                     <!-- Простая ссылка на детальную страницу -->
                     <a href="{% url 'product_detail' product.slug %}">
-                        <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                        {% with main_image=product.gallery|get_main_image %}
+                        {% if main_image %}
+                        <img src="{{ main_image.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                        {% else %}
+                        <img src="{% static 'images/no-image.webp' %}" class="card-img-top" alt="No image">
+                        {% endif %}
+                        {% endwith %}
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
