--- a/pc_shop/cart/templates/cart/success.html
+++ b/pc_shop/cart/templates/cart/success.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Заказ оформлен{% endblock %}
-
 {% block content %}
-  <h1>Спасибо за заказ!</h1>
-  <p>Ваш заказ успешно оформлен. Номер заказа: <strong>{{ order_id }}</strong>.</p>
-  <a href="{% url 'home' %}" class="btn btn-primary">Вернуться на главную</a>
+<div class="container text-center my-5">
+    <div class="card shadow-lg p-5 bg-light">
+        <h1 class="display-4 text-success"><i class="fas fa-check-circle"></i></h1>
+        <h2 class="mt-3">Заказ оформлен!</h2>
+        <p class="lead">Номер вашего заказа: <strong>{{ order.id }}</strong>. Спасибо за покупку!</p>
+        <a href="{% url 'home' %}" class="btn btn-primary">Вернуться на главную</a>
+    </div>
+</div>
 {% endblock %}
